--- a/LanguageSchool/Views/Question/CreateClosed.cshtml
+++ b/LanguageSchool/Views/Question/CreateClosed.cshtml
@@ -21,7 +21,7 @@
                             <strong>Treść</strong>
                         </div>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "widetextarea", @style = "width:800px" } })
+                            @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "widetextarea form-control", @style = "width:800px" } })
                             @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
                         </div>
                     </div>
