--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -14,6 +14,7 @@
     <div class="container">
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.GroupId)
+        @Html.HiddenFor(model => model.Points)
 
         @if (Model.ClosedQuestions.Any())
         {
@@ -47,6 +48,9 @@
                                 {
                                     ViewBag.i = i;
 
+                                    @Html.HiddenFor(model => model.ClosedQuestions[i].Id);
+                                    @Html.HiddenFor(model => Model.ClosedQuestions[i].Points);
+
                                     @Html.Partial("_PrepareAnswers");
                                 }
                             </ol>
@@ -56,6 +60,9 @@
                                 @for (int i = anotherHalf; i < amountOfQuestions; i++)
                                 {
                                     ViewBag.i = i;
+
+                                    @Html.HiddenFor(model => model.ClosedQuestions[i].Id);
+                                    @Html.HiddenFor(model => Model.ClosedQuestions[i].Points);
 
                                     @Html.Partial("_PrepareAnswers");
                                 }
@@ -69,6 +76,9 @@
                                 @for (int i = 0; i < Model.ClosedQuestions.Count; i++)
                                 {
                                     ViewBag.i = i;
+
+                                    @Html.HiddenFor(model => model.ClosedQuestions[i].Id);
+                                    @Html.HiddenFor(model => Model.ClosedQuestions[i].Points);
 
                                     @Html.Partial("_PrepareAnswers");
                                 }
