--- a/LanguageSchool/Views/UserOpenAnswer/Grade.cshtml
+++ b/LanguageSchool/Views/UserOpenAnswer/Grade.cshtml
@@ -10,28 +10,44 @@
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.UserId)
     @Html.HiddenFor(model => model.TestId)
+    @Html.HiddenFor(model => model.QuestionId)
 
-    <div class="container-fluid">
-        @{ Html.RenderPartial("_PartHeader", "Oceń odpowiedź"); }
+    <div class="container">
+        @Html.Partial("_PartHeader", "Oceń odpowiedź")
         <div class="row">
-            <div class="bordered col-md-12">
-                <div class="col-md-2">
-                    <strong>Odpowiedź</strong>
+            <div class="col-md-12 bordered">
+                <div class="col-md-12">
+                    <div class="col-md-1">
+                        <strong>Odpowiedź</strong>
+                    </div>
+                    <div class="col-md-11">
+                        @Html.DisplayFor(model => model.Content)
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    @Html.DisplayFor(model => model.Content)
-                </div>
-                <div class="col-md-2">
-                    <strong>Możliwe punkty</strong>
-                </div>
-                <div class="col-md-4">
-                    @Html.DisplayFor(model => model.Points)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 bordered">
+                <div class="form-group col-md-12">
+                    <div class="control-label col-md-1">
+                        <strong>Komentarz</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "widetextarea form-control", @style = "width:600px" } })
+                        @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-md-1">
+                        <strong>Uzyskane punkty</strong>
+                    </div>
+                    <div class="col-md-2">
+                        @Html.EditorFor(model => model.PointsAwarded, new { htmlAttributes = new { @style = "width:50px" } }) / @Html.DisplayFor(model => model.Points)
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-2 col-md-offset-10">
-                <input type="submit" value="Zapisz" class="btn btn-default" />
+                <input type="submit" value="Zapisz" class="btn btn-block btn-default" />
             </div>
         </div>
     </div>
