--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -40,7 +40,7 @@
     </div>
     @if(Model.Tests.Any())
     {
-    { Html.RenderPartial("_PartHeader", "Testy"); }
+        @Html.Partial("_PartHeader", "Testy oczekujące")
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
@@ -49,7 +49,7 @@
                             Nazwa
                         </th>
                         <th>
-                            Opis
+                            Komentarz do testu
                         </th>
                         <th>
                             Liczba pytań
@@ -66,6 +66,60 @@
                             </td>
                             <td>
                                 @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@(test.NumberOfOpenQuestions + test.NumberOfClosedQuestions)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    }
+    @if (Model.TakenTests.Any())
+    {
+        @Html.Partial("_PartHeader", "Testy przebyte")
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th>
+                            Data
+                        </th>
+                        <th>
+                            Nazwa
+                        </th>
+                        <th>
+                            Komentarz do testu
+                        </th>
+                        <th>
+                            Uzyskane punkty
+                        </th>
+                        <th>
+                            Ocena
+                        </th>
+                    </tr>
+                    @foreach (var test in Model.TakenTests)
+                    {
+                        var fontColor = "black";
+
+                        if (!test.IsMarked)
+                        {
+                            fontColor = "silver";
+                        }
+
+                        <tr style="color: @fontColor">
+                            <td>
+                                @test.CreationDate
+                            </td>
+                            <td>
+                                @test.Name
+                            </td>
+                            <td>
+                                @test.Comment
+                            </td>
+                            <td>
+                                @test.PointsAwarded / @test.Points
+                            </td>
+                            <td>
+                                @test.Mark
                             </td>
                         </tr>
                     }
