--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
+﻿@model LanguageSchool.Models.ViewModels.GroupStudentVM
 
 @{
     ViewBag.Title = "Index";
@@ -21,7 +21,7 @@
                         Opis
                     </th>
                 </tr>
-                @foreach (var lessonSubject in Model.LessonSubjects.Where(ls => ls.IsActive))
+                @foreach (var lessonSubject in Model.LessonSubjects)
                 {
                     <tr>
                         <td>
@@ -75,7 +75,7 @@
     }
     @if (Model.TakenTests.Any())
     {
-        @Html.Partial("_PartHeader", "Testy przebyte")
+        @Html.Partial("_PartHeader", "Uzyskane oceny")
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
@@ -84,7 +84,7 @@
                             Data
                         </th>
                         <th>
-                            Nazwa
+                            Nazwa testu
                         </th>
                         <th>
                             Komentarz do testu
