--- a/LanguageSchool/Views/Group/StudentDetails.cshtml
+++ b/LanguageSchool/Views/Group/StudentDetails.cshtml
@@ -9,69 +9,73 @@
     @Html.Partial("_PartHeader", Model.StudentName)
 
     @Html.Partial("_PartHeader", "Testy ocenione")
-    <div class="row bordered">
-        <table class="col-md-12 table table-striped table-bordered">
-            <tr>
-                <th>
-                    Data
-                </th>
-                <th>
-                    Nazwa
-                </th>
-                <th>
-                    Komentarz
-                </th>
-                <th>
-                    Uzyskane punkty
-                </th>
-                <th>
-                    Ocena
-                </th>
-            </tr>
-            @foreach (var test in Model.TakenTests)
-            {
-                <tr>
-                    <td>
-                        @test.CreationDate
-                    </td>
-                    <td>
-                        @test.Name
-                    </td>
-                    <td>
-                        @test.Comment
-                    </td>
-                    <td>
-                        @test.PointsAwarded / @test.Points
-                    </td>
-                    <td>
-                        @test.Mark
-                    </td>
-                </tr>
-            }
-        </table>
-    </div>
-
-    @Html.Partial("_PartHeader", "Pytania otwarte oczekujące na ocenę")
-    @foreach (var test in Model.AwaitingMark)
-    { 
-        <div class="row bordered">
-            <table class="col-md-12 table table-striped table-bordered">
+    <div class="row">
+        <div class="bordered col-md-12">
+            <table class="table table-striped table-bordered">
                 <tr>
                     <th>
-                        Treść pytania
+                        Data
                     </th>
                     <th>
-                        Udzielona odpowiedź
-                    </th>
-                    <th>
-                        Punkty do uzyskania
+                        Nazwa
                     </th>
                     <th>
                         Komentarz
                     </th>
+                    <th>
+                        Uzyskane punkty
+                    </th>
+                    <th>
+                        Ocena
+                    </th>
                 </tr>
+                @foreach (var test in Model.TakenTests)
+            {
+                    <tr>
+                        <td>
+                            @test.CreationDate
+                        </td>
+                        <td>
+                            @test.Name
+                        </td>
+                        <td>
+                            @test.Comment
+                        </td>
+                        <td>
+                            @test.PointsAwarded / @test.Points
+                        </td>
+                        <td>
+                            @test.Mark
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
 
-                @foreach (var item in test.AnswersAwaitingMark)
+    @Html.Partial("_PartHeader", "Pytania otwarte oczekujące na ocenę")
+    @foreach (var test in Model.AwaitingMark)
+    {
+        @Html.Partial("_PartHeader", test.TestName)
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th>
+                            Treść pytania
+                        </th>
+                        <th>
+                            Udzielona odpowiedź
+                        </th>
+                        <th>
+                            Punkty do uzyskania
+                        </th>
+                        <th>
+                            Komentarz
+                        </th>
+                    </tr>
+
+                    @foreach (var item in test.AnswersAwaitingMark)
                     {
                         var shownContent = item.Content;
 
@@ -101,8 +105,9 @@
                                 <td align="center"> - </td>
                             }
                         </tr>
-                }
-            </table>
+                    }
+                </table>
+            </div>
         </div>
     }
 </div>
